# sq3p

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: gynx-config.cmake.in  sq3p-config.cmake.in
doc/: quickstart.md
include/gynx/: sq.hpp  sq_view.hpp  visitor.hpp
include/gynx/io/: faqz.hpp  fastaqz.hpp
include/gynx/lut/: phred33.hpp  phred64.hpp
include/sq3p/: sq.hpp  visitor.hpp
include/sq3p/io/: faqz.hpp  fastaqz.hpp  kseq.h
test/: CMakeLists.txt  unit_tests.cpp
